--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
           <h1>Metric/Imperial Unit Conversion</h1>
           <input id="input-el" type="number" /> <br />
           <button id="convert-btn">Convert</button>
+          <button id="reset-btn">Reset</button>
         </div>
         <div class="conversion__output">
           <div class="box" id="length">
             <h2>Length (Meter/Feet)</h2>
+            <p id="conversion-1"></p>
           </div>
           <div class="box" id="volume">
             <h2>Volume (Liters/Gallons)</h2>
+            <p id="conversion-2"></p>
           </div>
           <div class="box" id="mass">
             <h2>Mass (Kilograms/Pounds)</h2>
+            <p id="conversion-3"></p>
           </div>
         </div>
       </section>
